--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -35,6 +35,7 @@
 # TODO          2.1.2   http://www.cmsmadesimple.org/2016/02/Announcing-CMSMS-2-1-2/
 # CVE-2016-2784 2.1.3   http://www.cmsmadesimple.org/2016/04/Announcing-CMSMS-2-1-3-Black-Point
 # TODO          2.1.6   http://www.cmsmadesimple.org/2016/12/Announcing-CMSMS-v2-1-6-Spanish-Wells/
+# CVE-2016-7904 TODO
 # CVE-2017-6070 0.8.1.6 Form Builder
 # CVE-2017-6071 0.8.1.6 Form Builder
 # CVE-2017-6072 0.8.1.6 Form Builder
